--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 
 		<!-- Bootstrap core CSS -->
 		<link href="./dist/css/bootstrap.min.css" rel="stylesheet">
-
+<script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.js"></script>
 		<!-- Custom styles for this template -->
 		<link href="./css/style.css" rel="stylesheet">
 
@@ -205,7 +205,8 @@
 				
 
 			</div>
-			
+			       <div class="app" data-role="page">
+
 			<div class="panel-body">
 				<form class="form-signin" id="userlogin">
 
@@ -222,6 +223,7 @@
 			</div>	
 			
 			</div>
+                       </div>
 		</div>
 		</script>
 <!-------------------------------------------------------------------->
@@ -250,11 +252,14 @@
 
 
 				</table>
+    			       <div class="app" data-role="page">
+
 				<form class="form-signin" >
               <input type="text" id="pointtoadd" class="form-control" placeholder="Add point" required="" autofocus="">
               <br>
               <input id="bntaddpoint" type="button" class="btn btn-lg btn-primary btn-block" value="Add point" />
             </form>
+                           </div>
 				</script>
 <!--------------------------------------------------------------------=>
 <!--------------------- Admin 'create task' page ---------------------------------->	
