--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+		  <script type="text/javascript" src="js/PushNotification.js"></script>
 	</head>
 
 	<body>
@@ -430,6 +431,28 @@
 		<script src="./js/app.js"></script>
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 		<script src="./assets/js/ie10-viewport-bug-workaround.js"></script>
+	
+	
+<script type="text/javascript">
+	var pushNotification;
+
+	function onDeviceReady() {
+		checkConnection();
+	}
+
+    function checkConnection() {
+		// Push Notifications DeviceReady
+		$.getScript("js/push_deviceReady.js", function(){});
+		// End of Push Notifications DeviceReady		
+	}
+	
+	// Push Notifications Functions
+	$.getScript("js/push_functions.js", function(){});
+	// End of Push Notifications Functions
+	
+	document.addEventListener("deviceready", onDeviceReady, true);
+</script>
+
+	
 	</body>
 </html>
-
