--- a/www/index.html
+++ b/www/index.html
@@ -434,6 +434,7 @@
 	
 	
 <script type="text/javascript">
+alert('hi3')
 
 	var pushNotification;
 
@@ -442,12 +443,14 @@
 	}
 
     function checkConnection() {
+	alert('hi4')
 		// Push Notifications DeviceReady
 		$.getScript("js/push_deviceReady.js", function(){});
 		// End of Push Notifications DeviceReady		
 	}
 	
 	// Push Notifications Functions
+	alert('hi5')
 	$.getScript("js/push_functions.js", function(){});
 	// End of Push Notifications Functions
 	
