--- a/www/index.html
+++ b/www/index.html
@@ -454,7 +454,7 @@ alert('hi3')
 	$.getScript("js/push_functions.js", function(){});
 	// End of Push Notifications Functions
 	
-	document.addEventListener("deviceready", onDeviceReady, true);
+	document.addEventListener("deviceready", onDeviceReady, false);
 </script>
 
 	
