--- a/www/index.html
+++ b/www/index.html
@@ -106,7 +106,10 @@
 							LOGOUT MY ACCOUNT
 						</button>
 			
-			
+
+{{#member}}
+            <input id="vipid2" type="hidden" value="{{ID}}"/>
+{{/member}}
           
         </div>
          </div>
